--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reminder-app",
   "version": "0.0.0",
   "license": "MIT",
+    "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "node Server.js",
