--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reminder-app",
   "version": "0.0.0",
   "license": "MIT",
-    "angular-cli": {},
+  "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "node Server.js",
@@ -26,6 +26,7 @@
     "angular2-flash-messages": "^1.0.8",
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "firebase": "^4.6.2",
     "lodash": "^4.17.4",
     "ng2-tag-input": "^1.4.1",
